Replace void with nil

--- a/docs/90-api/angle.mdx
+++ b/docs/90-api/angle.mdx
@@ -21,7 +21,7 @@ alksjdlkajsdkljalkjd asdalksd
 
 ## List of Methods
 
-### void Set(float) {#void-Set-float}
+### nil Set(float) {#nil-Set-float}
 
 ### float Get() {#float-Get}
 
