--- a/docs/90-api/camera.mdx
+++ b/docs/90-api/camera.mdx
@@ -9,15 +9,15 @@ id: Camera
 
 ### Transformation GetTransformation(Object3D) {#Transformation-GetTransformation-Object3D}
 
-### void SetTransformation(Transformation) {#void-SetTransformation-Transformation}
+### nil SetTransformation(Transformation) {#nil-SetTransformation-Transformation}
 
-### void MoveForward(float) {#void-MoveForward-float}
+### nil MoveForward(float) {#nil-MoveForward-float}
 
-### void MoveRight(float) {#void-MoveRight-float}
+### nil MoveRight(float) {#nil-MoveRight-float}
 
-### void MoveUp(float) {#void-MoveUp-float}
+### nil MoveUp(float) {#nil-MoveUp-float}
 
-### void Rotate(Vec3) {#void-Rotate-Vec3}
+### nil Rotate(Vec3) {#nil-Rotate-Vec3}
 
 ### Vec3 GetForward(Object3D) {#Vec3-GetForward-Object3D}
 
@@ -29,19 +29,19 @@ id: Camera
 
 ### Vec3 GetPosition(Object3D) {#Vec3-GetPosition-Object3D}
 
-### void SetPosition(Vec3) {#void-SetPosition-Vec3}
+### nil SetPosition(Vec3) {#nil-SetPosition-Vec3}
 
 ### Transformation GetTransformation() {#Transformation-GetTransformation}
 
-### void SetTransformation(Transformation) {#void-SetTransformation-Transformation}
+### nil SetTransformation(Transformation) {#nil-SetTransformation-Transformation}
 
-### void MoveForward(float) {#void-MoveForward-float}
+### nil MoveForward(float) {#nil-MoveForward-float}
 
-### void MoveRight(float) {#void-MoveRight-float}
+### nil MoveRight(float) {#nil-MoveRight-float}
 
-### void MoveUp(float) {#void-MoveUp-float}
+### nil MoveUp(float) {#nil-MoveUp-float}
 
-### void Rotate(Vec3) {#void-Rotate-Vec3}
+### nil Rotate(Vec3) {#nil-Rotate-Vec3}
 
 ### Vec3 GetForward() {#Vec3-GetForward}
 
@@ -53,17 +53,17 @@ id: Camera
 
 ### Vec3 GetPosition() {#Vec3-GetPosition}
 
-### void SetPosition(Vec3) {#void-SetPosition-Vec3}
+### nil SetPosition(Vec3) {#nil-SetPosition-Vec3}
 
 ### Frustum GetFrustum() {#Frustum-GetFrustum}
 
-### void SetFrustum(Frustum) {#void-SetFrustum-Frustum}
+### nil SetFrustum(Frustum) {#nil-SetFrustum-Frustum}
 
 ### Mat4 GetProjection() {#Mat4-GetProjection}
 
 ### Vec3 GetRay(Vec2) {#Vec3-GetRay-Vec2}
 
-### void SetFovY(float) {#void-SetFovY-float}
+### nil SetFovY(float) {#nil-SetFovY-float}
 
 ### float GetFovY() {#float-GetFovY}
 
