--- a/docs/90-api/client.mdx
+++ b/docs/90-api/client.mdx
@@ -64,17 +64,17 @@ end
 
 ### string UIItemUpdate(int actionID, UIItem item, userdata value) {#string-UIItemUpdate-int-actionID-UIItem-item-userdata-value}
 
-### void OpenKeyboardShortcutInput(string keyActionID) {#void-OpenKeyboardShortcutInput-string-keyActionID}
+### nil OpenKeyboardShortcutInput(string keyActionID) {#nil-OpenKeyboardShortcutInput-string-keyActionID}
 
-### void ToggleUICreatorWindow() {#void-ToggleUICreatorWindow}
+### nil ToggleUICreatorWindow() {#nil-ToggleUICreatorWindow}
 
-### void ToggleUIStudioSDK() {#void-ToggleUIStudioSDK}
+### nil ToggleUIStudioSDK() {#nil-ToggleUIStudioSDK}
 
-### void ToggleUIVisibility() {#void-ToggleUIVisibility}
+### nil ToggleUIVisibility() {#nil-ToggleUIVisibility}
 
-### void ToggleMainMenuVisibility() {#void-ToggleMainMenuVisibility}
+### nil ToggleMainMenuVisibility() {#nil-ToggleMainMenuVisibility}
 
-### void SetToClientUI() {#void-SetToClientUI}
+### nil SetToClientUI() {#nil-SetToClientUI}
 
 ### bool GetUICapturesMouseOrKeyboard() {#bool-GetUICapturesMouseOrKeyboard}
 
@@ -86,45 +86,45 @@ end
 
 ### bool GetUIIsInEditMode() {#bool-GetUIIsInEditMode}
 
-### void OpenUIWindow(string windowID) {#void-OpenUIWindow-string-windowID}
+### nil OpenUIWindow(string windowID) {#nil-OpenUIWindow-string-windowID}
 
-### void CloseUIWindow(string windowID) {#void-CloseUIWindow-string-windowID}
+### nil CloseUIWindow(string windowID) {#nil-CloseUIWindow-string-windowID}
 
-### void ToggleUIWindow(string windowID) {#void-ToggleUIWindow-string-windowID}
+### nil ToggleUIWindow(string windowID) {#nil-ToggleUIWindow-string-windowID}
 
 ### bool IsWindowOpen(string windowID) {#bool-IsWindowOpen-string-windowID}
 
-### void SetWindowPos(string, Vec2) {#void-SetWindowPos-string-Vec2}
+### nil SetWindowPos(string, Vec2) {#nil-SetWindowPos-string-Vec2}
 
-### void OpenScriptFile(string) {#void-OpenScriptFile-string}
+### nil OpenScriptFile(string) {#nil-OpenScriptFile-string}
 
-### void OpenScriptFile(string, int) {#void-OpenScriptFile-string-int}
+### nil OpenScriptFile(string, int) {#nil-OpenScriptFile-string-int}
 
-### void SetUIScale(float scale) {#void-SetUIScale-float-scale}
+### nil SetUIScale(float scale) {#nil-SetUIScale-float-scale}
 
 ### float GetUIScale() {#float-GetUIScale}
 
 ### bool GetUIScaleAuto() {#bool-GetUIScaleAuto}
 
-### void SetUIScaleAuto(bool autoScale) {#void-SetUIScaleAuto-bool-autoScale}
+### nil SetUIScaleAuto(bool autoScale) {#nil-SetUIScaleAuto-bool-autoScale}
 
 ### string GetMontageURL() {#string-GetMontageURL}
 
-### void SetMontageURL(string url) {#void-SetMontageURL-string-url}
+### nil SetMontageURL(string url) {#nil-SetMontageURL-string-url}
 
-### void LoadMontageByURL() {#void-LoadMontageByURL}
+### nil LoadMontageByURL() {#nil-LoadMontageByURL}
 
-### void CancelLoadMontageByURL() {#void-CancelLoadMontageByURL}
+### nil CancelLoadMontageByURL() {#nil-CancelLoadMontageByURL}
 
 ### string GetConnectionStatus() {#string-GetConnectionStatus}
 
-### void DisconnectFromMontageServer() {#void-DisconnectFromMontageServer}
+### nil DisconnectFromMontageServer() {#nil-DisconnectFromMontageServer}
 
 ### float GetLogValue(string) {#float-GetLogValue-string}
 
-### void SetLogValue(string, float) {#void-SetLogValue-string-float}
+### nil SetLogValue(string, float) {#nil-SetLogValue-string-float}
 
-### void SetStrLogValue(string, string) {#void-SetStrLogValue-string-string}
+### nil SetStrLogValue(string, string) {#nil-SetStrLogValue-string-string}
 
 ### float GetLogIValue(int) {#float-GetLogIValue-int}
 
@@ -156,9 +156,9 @@ end
 
 ### Config GetConfigInputActions() {#Config-GetConfigInputActions}
 
-### void ConnectToServer(Client) {#void-ConnectToServer-Client}
+### nil ConnectToServer(Client) {#nil-ConnectToServer-Client}
 
-### void Disconnect() {#void-Disconnect}
+### nil Disconnect() {#nil-Disconnect}
 
 ### bool OpenFolder(string folder) {#bool-OpenFolder-string-folder}
 
@@ -166,17 +166,17 @@ end
 
 ### int GetLoadedScriptsVersion() {#int-GetLoadedScriptsVersion}
 
-### void LuaOpenDebugger() {#void-LuaOpenDebugger}
+### nil LuaOpenDebugger() {#nil-LuaOpenDebugger}
 
-### void LuaEnableDebugging(bool enable) {#void-LuaEnableDebugging-bool-enable}
+### nil LuaEnableDebugging(bool enable) {#nil-LuaEnableDebugging-bool-enable}
 
-### void OnLuaLog() {#void-OnLuaLog}
+### nil OnLuaLog() {#nil-OnLuaLog}
 
-### void ScrollToLastestLuaLog() {#void-ScrollToLastestLuaLog}
+### nil ScrollToLastestLuaLog() {#nil-ScrollToLastestLuaLog}
 
 ### bool IsContainerEnabledAndVisible(UIItem uiItem) {#bool-IsContainerEnabledAndVisible-UIItem-uiItem}
 
-### void Log(string) {#void-Log-string}
+### nil Log(string) {#nil-Log-string}
 
 ### bool IsClient() {#bool-IsClient}
 
@@ -184,7 +184,7 @@ end
 
 ### bool DevMode() {#bool-DevMode}
 
-### void SelectItemInUICreator(UIItem uiItem) {#void-SelectItemInUICreator-UIItem-uiItem}
+### nil SelectItemInUICreator(UIItem uiItem) {#nil-SelectItemInUICreator-UIItem-uiItem}
 
 ### UIItem GetUIItemByUIActionID(int uiActionID) {#UIItem-GetUIItemByUIActionID-int-uiActionID}
 
@@ -194,17 +194,17 @@ end
 
 ### int GetCurrentUIActionID() {#int-GetCurrentUIActionID}
 
-### void WriteToScreen(string, Vec2, Vec2, Vec4, int, float) {#void-WriteToScreen-string-Vec2-Vec2-Vec4-int-float}
+### nil WriteToScreen(string, Vec2, Vec2, Vec4, int, float) {#nil-WriteToScreen-string-Vec2-Vec2-Vec4-int-float}
 
-### void WriteToScreen(string, Vec2) {#void-WriteToScreen-string-Vec2}
+### nil WriteToScreen(string, Vec2) {#nil-WriteToScreen-string-Vec2}
 
-### void WriteToScreen(string, Vec2, Vec2) {#void-WriteToScreen-string-Vec2-Vec2}
+### nil WriteToScreen(string, Vec2, Vec2) {#nil-WriteToScreen-string-Vec2-Vec2}
 
-### void WriteToScreen(string, Vec2, Vec2, Vec4) {#void-WriteToScreen-string-Vec2-Vec2-Vec4}
+### nil WriteToScreen(string, Vec2, Vec2, Vec4) {#nil-WriteToScreen-string-Vec2-Vec2-Vec4}
 
-### void WriteToScreen(string, Vec2, Vec2, Vec4, int) {#void-WriteToScreen-string-Vec2-Vec2-Vec4-int}
+### nil WriteToScreen(string, Vec2, Vec2, Vec4, int) {#nil-WriteToScreen-string-Vec2-Vec2-Vec4-int}
 
-### void CloseApp() {#void-CloseApp}
+### nil CloseApp() {#nil-CloseApp}
 
 ### Camera GetMainCamera() {#Camera-GetMainCamera}
 
@@ -217,19 +217,19 @@ Returns [`CommandLine`](/api/commandLine)
 
 ### Vec4 GetBGColor() {#Vec4-GetBGColor}
 
-### void SetBGColor(Vec4) {#void-SetBGColor-Vec4}
+### nil SetBGColor(Vec4) {#nil-SetBGColor-Vec4}
 
 ### bool GetVREnabled() {#bool-GetVREnabled}
 
-### void SetVREnabled(bool, string) {#void-SetVREnabled-bool-string}
+### nil SetVREnabled(bool, string) {#nil-SetVREnabled-bool-string}
 
-### void ToggleVREnabled(string) {#void-ToggleVREnabled-string}
+### nil ToggleVREnabled(string) {#nil-ToggleVREnabled-string}
 
-### void TriggerCrash() {#void-TriggerCrash}
+### nil TriggerCrash() {#nil-TriggerCrash}
 
-### void TriggerException() {#void-TriggerException}
+### nil TriggerException() {#nil-TriggerException}
 
-### void TriggerCriticalError() {#void-TriggerCriticalError}
+### nil TriggerCriticalError() {#nil-TriggerCriticalError}
 
 ### AssetManager GetResourceManScene() {#AssetManager-GetResourceManScene}
 
@@ -237,25 +237,25 @@ Returns [`CommandLine`](/api/commandLine)
 
 ### AssetManager GetResourceManSettings() {#AssetManager-GetResourceManSettings}
 
-### void ToggleChannelRendering() {#void-ToggleChannelRendering}
+### nil ToggleChannelRendering() {#nil-ToggleChannelRendering}
 
 ### int GetRenderChannelsCount() {#int-GetRenderChannelsCount}
 
 ### float GetRenderChannelOpacity(int) {#float-GetRenderChannelOpacity-int}
 
-### void SetRenderChannelOpacity(int, float) {#void-SetRenderChannelOpacity-int-float}
+### nil SetRenderChannelOpacity(int, float) {#nil-SetRenderChannelOpacity-int-float}
 
-### void LoadEntityPath() {#void-LoadEntityPath}
+### nil LoadEntityPath() {#nil-LoadEntityPath}
 
-### void SaveEntityPath() {#void-SaveEntityPath}
+### nil SaveEntityPath() {#nil-SaveEntityPath}
 
-### void PlayEntityPath() {#void-PlayEntityPath}
+### nil PlayEntityPath() {#nil-PlayEntityPath}
 
-### void ClearEntityPath() {#void-ClearEntityPath}
+### nil ClearEntityPath() {#nil-ClearEntityPath}
 
-### void AddEntityPathWaypoint() {#void-AddEntityPathWaypoint}
+### nil AddEntityPathWaypoint() {#nil-AddEntityPathWaypoint}
 
-### void TakeScreenShot() {#void-TakeScreenShot}
+### nil TakeScreenShot() {#nil-TakeScreenShot}
 
 ### string GetCredits() {#string-GetCredits}
 
