--- a/docs/90-api/config.mdx
+++ b/docs/90-api/config.mdx
@@ -7,21 +7,21 @@ id: Config
 
 ## List of Methods
 
-### void SetInt(string, int) {#void-SetInt-string-int}
+### nil SetInt(string, int) {#nil-SetInt-string-int}
 
-### void SetFloat(string, double) {#void-SetFloat-string-double}
+### nil SetFloat(string, double) {#nil-SetFloat-string-double}
 
-### void SetBool(string, bool) {#void-SetBool-string-bool}
+### nil SetBool(string, bool) {#nil-SetBool-string-bool}
 
-### void SetString(string, string) {#void-SetString-string-string}
+### nil SetString(string, string) {#nil-SetString-string-string}
 
-### void SetVec2(string, Vec2) {#void-SetVec2-string-Vec2}
+### nil SetVec2(string, Vec2) {#nil-SetVec2-string-Vec2}
 
-### void SetVec3(string, Vec3) {#void-SetVec3-string-Vec3}
+### nil SetVec3(string, Vec3) {#nil-SetVec3-string-Vec3}
 
-### void SetVec4(string, Vec4) {#void-SetVec4-string-Vec4}
+### nil SetVec4(string, Vec4) {#nil-SetVec4-string-Vec4}
 
-### void Del(string) {#void-Del-string}
+### nil Del(string) {#nil-Del-string}
 
 ### bool Exists(string) {#bool-Exists-string}
 
