--- a/docs/90-api/input.mdx
+++ b/docs/90-api/input.mdx
@@ -57,7 +57,7 @@ id: Input
 
 ### bool GetRelativeMouseMode() {#bool-GetRelativeMouseMode}
 
-### void SetRelativeMouseMode(bool) {#void-SetRelativeMouseMode-bool}
+### nil SetRelativeMouseMode(bool) {#nil-SetRelativeMouseMode-bool}
 
 ### float GesturePinch() {#float-GesturePinch}
 
