--- a/docs/90-api/mat3.mdx
+++ b/docs/90-api/mat3.mdx
@@ -37,7 +37,7 @@ id: Mat3
 
 ### Vec3 __index(Mat3, int) {#Vec3-index-Mat3-int}
 
-### void __newindex(Mat3, int, Vec3) {#void-newindex-Mat3-int-Vec3}
+### nil __newindex(Mat3, int, Vec3) {#nil-newindex-Mat3-int-Vec3}
 
 ### Mat3 __add(Mat3, Mat3) {#Mat3-add-Mat3-Mat3}
 
