--- a/docs/90-api/mat4.mdx
+++ b/docs/90-api/mat4.mdx
@@ -53,7 +53,7 @@ id: Mat4
 
 ### Vec4 __index(Mat4, int) {#Vec4-index-Mat4-int}
 
-### void __newindex(Mat4, int, Vec4) {#void-newindex-Mat4-int-Vec4}
+### nil __newindex(Mat4, int, Vec4) {#nil-newindex-Mat4-int-Vec4}
 
 ### Mat4 __add(Mat4, Mat4) {#Mat4-add-Mat4-Mat4}
 
