--- a/docs/90-api/meshDataBuilder.mdx
+++ b/docs/90-api/meshDataBuilder.mdx
@@ -11,7 +11,7 @@ id: MeshDataBuilder
 
 ## List of Methods
 
-### void Clear() {#void-Clear}
+### nil Clear() {#nil-Clear}
 
 ### int AddVertex(Vec3) {#int-AddVertex-Vec3}
 
@@ -21,11 +21,11 @@ id: MeshDataBuilder
 
 ### int AddVertex(Vec3, Vec2) {#int-AddVertex-Vec3-Vec2}
 
-### void AddIndex(int) {#void-AddIndex-int}
+### nil AddIndex(int) {#nil-AddIndex-int}
 
-### void AddIndex(int, int, int) {#void-AddIndex-int-int-int}
+### nil AddIndex(int, int, int) {#nil-AddIndex-int-int-int}
 
-### void AddIndex(int, int) {#void-AddIndex-int-int}
+### nil AddIndex(int, int) {#nil-AddIndex-int-int}
 
 ## List of Properties
 
