--- a/docs/90-api/object.mdx
+++ b/docs/90-api/object.mdx
@@ -7,7 +7,7 @@ id: Object
 
 ## List of Methods
 
-### void RemoveAllNonNativeComponents() {#void-RemoveAllNonNativeComponents}
+### nil RemoveAllNonNativeComponents() {#nil-RemoveAllNonNativeComponents}
 
 ### userdata AddComponent(string) {#userdata-AddComponent-string}
 
