--- a/docs/90-api/quat.mdx
+++ b/docs/90-api/quat.mdx
@@ -23,7 +23,7 @@ id: Quat
 
 ### float __index(Quat, int) {#float-index-Quat-int}
 
-### void __newindex(Quat, int, float) {#void-newindex-Quat-int-float}
+### nil __newindex(Quat, int, float) {#nil-newindex-Quat-int-float}
 
 ### Quat __add(Quat, Quat) {#Quat-add-Quat-Quat}
 
@@ -57,11 +57,11 @@ id: Quat
 
 ### Quat Mix(Quat, Quat, float) {#Quat-Mix-Quat-Quat-float}
 
-### void Normalize() {#void-Normalize}
+### nil Normalize() {#nil-Normalize}
 
 ### Quat Slerp(Quat, Quat, float) {#Quat-Slerp-Quat-Quat-float}
 
-### void Rotate(float, Vec3) {#void-Rotate-float-Vec3}
+### nil Rotate(float, Vec3) {#nil-Rotate-float-Vec3}
 
 ### Quat GetRotated(float, Vec3) {#Quat-GetRotated-float-Vec3}
 
@@ -69,7 +69,7 @@ id: Quat
 
 ### Quat LookAt(Vec3, Vec3) {#Quat-LookAt-Vec3-Vec3}
 
-### void Invert() {#void-Invert}
+### nil Invert() {#nil-Invert}
 
 ### Quat GetInversed() {#Quat-GetInversed}
 
