--- a/docs/90-api/scene.mdx
+++ b/docs/90-api/scene.mdx
@@ -19,11 +19,11 @@ id: Scene
 
 ### Object CloneObject(Object, string) {#Object-CloneObject-Object-string}
 
-### void DestroyObject(Object) {#void-DestroyObject-Object}
+### nil DestroyObject(Object) {#nil-DestroyObject-Object}
 
 ### userdata CreateMaterial(string) {#userdata-CreateMaterial-string}
 
-### void DebugStats() {#void-DebugStats}
+### nil DebugStats() {#nil-DebugStats}
 
 ### table GetObjectsByName(string) {#table-GetObjectsByName-string}
 
@@ -45,9 +45,9 @@ id: Scene
 
 ### int Merge(string) {#int-Merge-string}
 
-### void ScheduleLoad(string) {#void-ScheduleLoad-string}
+### nil ScheduleLoad(string) {#nil-ScheduleLoad-string}
 
-### void RebuildLighting() {#void-RebuildLighting}
+### nil RebuildLighting() {#nil-RebuildLighting}
 
 ### LightingUpdate CreateLighting(string, string) {#LightingUpdate-CreateLighting-string-string}
 
