--- a/docs/90-api/scriptComponent.mdx
+++ b/docs/90-api/scriptComponent.mdx
@@ -66,11 +66,11 @@ end
 
 ### bool GetSyncToClient() {#bool-GetSyncToClient}
 
-### void SetSyncToClient(bool) {#void-SetSyncToClient-bool}
+### nil SetSyncToClient(bool) {#nil-SetSyncToClient-bool}
 
 ### bool AssignScript(string) {#bool-AssignScript-string}
 
-### void RPC(...) {#void-RPC}
+### nil RPC(...) {#nil-RPC}
 
 ## List of Properties
 
