--- a/docs/90-api/scriptInstance.mdx
+++ b/docs/90-api/scriptInstance.mdx
@@ -7,17 +7,17 @@ id: ScriptInstance
 
 ## List of Methods
 
-### void Start() {#void-Start}
+### nil Start() {#nil-Start}
 
-### void Update(float deltaTime) {#void-Update-float-deltaTime}
+### nil Update(float deltaTime) {#nil-Update-float-deltaTime}
 
-### void Attach() {#void-Attach}
+### nil Attach() {#nil-Attach}
 
-### void Detach() {#void-Detach}
+### nil Detach() {#nil-Detach}
 
-### void RPC(string, ...) {#void-RPC-string}
+### nil RPC(string, ...) {#nil-RPC-string}
 
-### void RPC(int, string, ...) {#void-RPC-int-string}
+### nil RPC(int, string, ...) {#nil-RPC-int-string}
 
 ## List of Properties
 
