--- a/docs/90-api/server.mdx
+++ b/docs/90-api/server.mdx
@@ -13,17 +13,17 @@ This class is only available on server
 
 ### int GetScriptsVersion() {#int-GetScriptsVersion}
 
-### void LuaReset() {#void-LuaReset}
+### nil LuaReset() {#nil-LuaReset}
 
-### void ResendScripts() {#void-ResendScripts}
+### nil ResendScripts() {#nil-ResendScripts}
 
 ### table GetLuaFilesList() {#table-GetLuaFilesList}
 
 ### table GetVoxelFilesList() {#table-GetVoxelFilesList}
 
-### void SaveVoxelData() {#void-SaveVoxelData}
+### nil SaveVoxelData() {#nil-SaveVoxelData}
 
-### void OnLuaLog() {#void-OnLuaLog}
+### nil OnLuaLog() {#nil-OnLuaLog}
 
 ### bool IsClient() {#bool-IsClient}
 
@@ -33,7 +33,7 @@ This class is only available on server
 
 ### int GetCurrentUIActionID() {#int-GetCurrentUIActionID}
 
-### void ScrollToLastestLuaLog() {#void-ScrollToLastestLuaLog}
+### nil ScrollToLastestLuaLog() {#nil-ScrollToLastestLuaLog}
 
 ### CommandLine GetCommandLine() {#CommandLine-GetCommandLine}
 
