--- a/docs/90-api/vec2.mdx
+++ b/docs/90-api/vec2.mdx
@@ -37,7 +37,7 @@ id: Vec2
 
 ### float __index(Vec2, int) {#float-index-Vec2-int}
 
-### void __newindex(Vec2, int, float) {#void-newindex-Vec2-int-float}
+### nil __newindex(Vec2, int, float) {#nil-newindex-Vec2-int-float}
 
 ### Vec2 __add(Vec2, Vec2) {#Vec2-add-Vec2-Vec2}
 
@@ -103,9 +103,9 @@ id: Vec2
 
 ### Vec2 GetAbs() {#Vec2-GetAbs}
 
-### void Clamp(Vec2, float, float) {#void-Clamp-Vec2-float-float}
+### nil Clamp(Vec2, float, float) {#nil-Clamp-Vec2-float-float}
 
-### void Clamp(Vec2, Vec2, Vec2) {#void-Clamp-Vec2-Vec2-Vec2}
+### nil Clamp(Vec2, Vec2, Vec2) {#nil-Clamp-Vec2-Vec2-Vec2}
 
 ### Vec2 GetClamped(Vec2, float, float) {#Vec2-GetClamped-Vec2-float-float}
 
@@ -127,15 +127,15 @@ id: Vec2
 
 ### Vec2 GetNormalizedSafe() {#Vec2-GetNormalizedSafe}
 
-### void Ceil(Vec2) {#void-Ceil-Vec2}
+### nil Ceil(Vec2) {#nil-Ceil-Vec2}
 
 ### Vec2 GetCeiled(Vec2) {#Vec2-GetCeiled-Vec2}
 
-### void Floor(Vec2) {#void-Floor-Vec2}
+### nil Floor(Vec2) {#nil-Floor-Vec2}
 
 ### Vec2 GetFloored(Vec2) {#Vec2-GetFloored-Vec2}
 
-### void Round() {#void-Round}
+### nil Round() {#nil-Round}
 
 ### Vec2 GetRounded(Vec2) {#Vec2-GetRounded-Vec2}
 
@@ -145,9 +145,9 @@ id: Vec2
 
 ### float GetAngleRad() {#float-GetAngleRad}
 
-### void Rotate(float) {#void-Rotate-float}
+### nil Rotate(float) {#nil-Rotate-float}
 
-### void Rotate(Angle) {#void-Rotate-Angle}
+### nil Rotate(Angle) {#nil-Rotate-Angle}
 
 ### Vec2 GetRotated(float) {#Vec2-GetRotated-float}
 
