--- a/docs/90-api/vec2i.mdx
+++ b/docs/90-api/vec2i.mdx
@@ -37,7 +37,7 @@ id: Vec2i
 
 ### int __index(Vec2i, int) {#int-index-Vec2i-int}
 
-### void __newindex(Vec2i, int, int) {#void-newindex-Vec2i-int-int}
+### nil __newindex(Vec2i, int, int) {#nil-newindex-Vec2i-int-int}
 
 ### Vec2i __add(Vec2i, Vec2i) {#Vec2i-add-Vec2i-Vec2i}
 
@@ -103,9 +103,9 @@ id: Vec2i
 
 ### Vec2i GetAbs() {#Vec2i-GetAbs}
 
-### void Clamp(Vec2i, int, int) {#void-Clamp-Vec2i-int-int}
+### nil Clamp(Vec2i, int, int) {#nil-Clamp-Vec2i-int-int}
 
-### void Clamp(Vec2i, Vec2i, Vec2i) {#void-Clamp-Vec2i-Vec2i-Vec2i}
+### nil Clamp(Vec2i, Vec2i, Vec2i) {#nil-Clamp-Vec2i-Vec2i-Vec2i}
 
 ### Vec2i GetClamped(Vec2i, int, int) {#Vec2i-GetClamped-Vec2i-int-int}
 
