--- a/docs/90-api/vec3.mdx
+++ b/docs/90-api/vec3.mdx
@@ -73,7 +73,7 @@ This action is dangerous
 
 ### float __index(Vec3, int) {#float-index-Vec3-int}
 
-### void __newindex(Vec3, int, float) {#void-newindex-Vec3-int-float}
+### nil __newindex(Vec3, int, float) {#nil-newindex-Vec3-int-float}
 
 ### Vec3 __add(Vec3, Vec3) {#Vec3-add-Vec3-Vec3}
 
@@ -139,9 +139,9 @@ This action is dangerous
 
 ### Vec3 GetAbs() {#Vec3-GetAbs}
 
-### void Clamp(Vec3, float, float) {#void-Clamp-Vec3-float-float}
+### nil Clamp(Vec3, float, float) {#nil-Clamp-Vec3-float-float}
 
-### void Clamp(Vec3, Vec3, Vec3) {#void-Clamp-Vec3-Vec3-Vec3}
+### nil Clamp(Vec3, Vec3, Vec3) {#nil-Clamp-Vec3-Vec3-Vec3}
 
 ### Vec3 GetClamped(Vec3, float, float) {#Vec3-GetClamped-Vec3-float-float}
 
@@ -163,15 +163,15 @@ This action is dangerous
 
 ### Vec3 GetNormalizedSafe() {#Vec3-GetNormalizedSafe}
 
-### void Ceil(Vec3) {#void-Ceil-Vec3}
+### nil Ceil(Vec3) {#nil-Ceil-Vec3}
 
 ### Vec3 GetCeiled(Vec3) {#Vec3-GetCeiled-Vec3}
 
-### void Floor(Vec3) {#void-Floor-Vec3}
+### nil Floor(Vec3) {#nil-Floor-Vec3}
 
 ### Vec3 GetFloored(Vec3) {#Vec3-GetFloored-Vec3}
 
-### void Round(Vec3) {#void-Round-Vec3}
+### nil Round(Vec3) {#nil-Round-Vec3}
 
 ### Vec3 GetRounded(Vec3) {#Vec3-GetRounded-Vec3}
 
