--- a/docs/90-api/vec3i.mdx
+++ b/docs/90-api/vec3i.mdx
@@ -57,7 +57,7 @@ id: Vec3i
 
 ### int __index(Vec3i, int) {#int-index-Vec3i-int}
 
-### void __newindex(Vec3i, int, int) {#void-newindex-Vec3i-int-int}
+### nil __newindex(Vec3i, int, int) {#nil-newindex-Vec3i-int-int}
 
 ### Vec3i __add(Vec3i, Vec3i) {#Vec3i-add-Vec3i-Vec3i}
 
@@ -123,9 +123,9 @@ id: Vec3i
 
 ### Vec3i GetAbs() {#Vec3i-GetAbs}
 
-### void Clamp(Vec3i, int, int) {#void-Clamp-Vec3i-int-int}
+### nil Clamp(Vec3i, int, int) {#nil-Clamp-Vec3i-int-int}
 
-### void Clamp(Vec3i, Vec3i, Vec3i) {#void-Clamp-Vec3i-Vec3i-Vec3i}
+### nil Clamp(Vec3i, Vec3i, Vec3i) {#nil-Clamp-Vec3i-Vec3i-Vec3i}
 
 ### Vec3i GetClamped(Vec3i, int, int) {#Vec3i-GetClamped-Vec3i-int-int}
 
