--- a/docs/90-api/vec4.mdx
+++ b/docs/90-api/vec4.mdx
@@ -125,7 +125,7 @@ id: Vec4
 
 ### float __index(Vec4, int) {#float-index-Vec4-int}
 
-### void __newindex(Vec4, int, float) {#void-newindex-Vec4-int-float}
+### nil __newindex(Vec4, int, float) {#nil-newindex-Vec4-int-float}
 
 ### Vec4 __add(Vec4, Vec4) {#Vec4-add-Vec4-Vec4}
 
@@ -191,9 +191,9 @@ id: Vec4
 
 ### Vec4 GetAbs() {#Vec4-GetAbs}
 
-### void Clamp(Vec4, float, float) {#void-Clamp-Vec4-float-float}
+### nil Clamp(Vec4, float, float) {#nil-Clamp-Vec4-float-float}
 
-### void Clamp(Vec4, Vec4, Vec4) {#void-Clamp-Vec4-Vec4-Vec4}
+### nil Clamp(Vec4, Vec4, Vec4) {#nil-Clamp-Vec4-Vec4-Vec4}
 
 ### Vec4 GetClamped(Vec4, float, float) {#Vec4-GetClamped-Vec4-float-float}
 
@@ -215,15 +215,15 @@ id: Vec4
 
 ### Vec4 GetNormalizedSafe() {#Vec4-GetNormalizedSafe}
 
-### void Ceil(Vec4) {#void-Ceil-Vec4}
+### nil Ceil(Vec4) {#nil-Ceil-Vec4}
 
 ### Vec4 GetCeiled(Vec4) {#Vec4-GetCeiled-Vec4}
 
-### void Floor(Vec4) {#void-Floor-Vec4}
+### nil Floor(Vec4) {#nil-Floor-Vec4}
 
 ### Vec4 GetFloored(Vec4) {#Vec4-GetFloored-Vec4}
 
-### void Round(Vec4) {#void-Round-Vec4}
+### nil Round(Vec4) {#nil-Round-Vec4}
 
 ### Vec4 GetRounded(Vec4) {#Vec4-GetRounded-Vec4}
 
