--- a/docs/90-api/vec4i.mdx
+++ b/docs/90-api/vec4i.mdx
@@ -125,7 +125,7 @@ id: Vec4i
 
 ### int __index(Vec4i, int) {#int-index-Vec4i-int}
 
-### void __newindex(Vec4i, int, int) {#void-newindex-Vec4i-int-int}
+### nil __newindex(Vec4i, int, int) {#nil-newindex-Vec4i-int-int}
 
 ### Vec4i __add(Vec4i, Vec4i) {#Vec4i-add-Vec4i-Vec4i}
 
@@ -191,9 +191,9 @@ id: Vec4i
 
 ### Vec4i GetAbs() {#Vec4i-GetAbs}
 
-### void Clamp(Vec4i, int, int) {#void-Clamp-Vec4i-int-int}
+### nil Clamp(Vec4i, int, int) {#nil-Clamp-Vec4i-int-int}
 
-### void Clamp(Vec4i, Vec4i, Vec4i) {#void-Clamp-Vec4i-Vec4i-Vec4i}
+### nil Clamp(Vec4i, Vec4i, Vec4i) {#nil-Clamp-Vec4i-Vec4i-Vec4i}
 
 ### Vec4i GetClamped(Vec4i, int, int) {#Vec4i-GetClamped-Vec4i-int-int}
 
