--- a/docs/90-api/voxelInspectComponent.mdx
+++ b/docs/90-api/voxelInspectComponent.mdx
@@ -7,11 +7,11 @@ id: VoxelInspectComponent
 
 ## List of Methods
 
-### void AddVoxelInfo(float, userdata, string, userdata, Mat4, bool, int) {#void-AddVoxelInfo-float-userdata-string-userdata-Mat4-bool-int}
+### nil AddVoxelInfo(float, userdata, string, userdata, Mat4, bool, int) {#nil-AddVoxelInfo-float-userdata-string-userdata-Mat4-bool-int}
 
-### void Clear() {#void-Clear}
+### nil Clear() {#nil-Clear}
 
-### void SetLineColor(Vec4) {#void-SetLineColor-Vec4}
+### nil SetLineColor(Vec4) {#nil-SetLineColor-Vec4}
 
 ## List of Properties
 
