--- a/docs/90-api/material.mdx
+++ b/docs/90-api/material.mdx
@@ -21,7 +21,7 @@ id: Material
 
 ### Vec4 GetPropertyVec4(string) {#Vec4-GetPropertyVec4-string}
 
-### void SetProperty(string, Vec3) {#void-SetProperty-string-Vec3}
+### nil SetProperty(string, Vec3) {#nil-SetProperty-string-Vec3}
 
-### void SetProperty(string, Vec4) {#void-SetProperty-string-Vec4}
+### nil SetProperty(string, Vec4) {#nil-SetProperty-string-Vec4}
 
