--- a/docs/90-api/object3D.mdx
+++ b/docs/90-api/object3D.mdx
@@ -9,15 +9,15 @@ id: Object3D
 
 ### Transformation GetTransformation(Object3D) {#Transformation-GetTransformation-Object3D}
 
-### void SetTransformation(Transformation) {#void-SetTransformation-Transformation}
+### nil SetTransformation(Transformation) {#nil-SetTransformation-Transformation}
 
-### void MoveForward(float) {#void-MoveForward-float}
+### nil MoveForward(float) {#nil-MoveForward-float}
 
-### void MoveRight(float) {#void-MoveRight-float}
+### nil MoveRight(float) {#nil-MoveRight-float}
 
-### void MoveUp(float) {#void-MoveUp-float}
+### nil MoveUp(float) {#nil-MoveUp-float}
 
-### void Rotate(Vec3) {#void-Rotate-Vec3}
+### nil Rotate(Vec3) {#nil-Rotate-Vec3}
 
 ### Vec3 GetForward(Object3D) {#Vec3-GetForward-Object3D}
 
@@ -29,7 +29,7 @@ id: Object3D
 
 ### Vec3 GetPosition(Object3D) {#Vec3-GetPosition-Object3D}
 
-### void SetPosition(Vec3) {#void-SetPosition-Vec3}
+### nil SetPosition(Vec3) {#nil-SetPosition-Vec3}
 
 ## List of Properties
 
